# simple_rag

./: .env.example  .gitignore  LANGCHAIN_1.0_UPGRADE.md  README.md  pyproject.toml  rag_chat.py  requirements.txt  validate_setup.py
issues/: 1.md  update-refresh-packages.md
pdfs/: pdf_goes_here
